early support for XMLParser